crates/qwik-optimizer-oxc/tests/snapshots/issue_5008.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore } from "@qwik.dev/core";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = () => {
	const store = useStore([{ value: 0 }]);
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [
		/* @__PURE__ */ _jsxSorted("button", null, { "q-e:click": /* @__PURE__ */ qrl(i_zo9wkw0NBzs, "default_component_button_q_e_click_zo9wkw0NBzs", [store]) }, "+1", 3, "u6_0"),
		store.map(function(v, idx) {
			return /* @__PURE__ */ _jsxSorted("div", null, null, ["Function:", _wrapProp(v)], 1, "fn_" + idx);
		}),
		store.map((v, idx) => /* @__PURE__ */ _jsxSorted("div", null, null, ["Arrow:", _wrapProp(v)], 1, "arrow_" + idx))
	], 1, "u6_1");
};

=== test.tsx_default_component_button_q_e_click_zo9wkw0NBzs.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const default_component_button_q_e_click_zo9wkw0NBzs = () => {
	const store = _captures[0];
	return store[0].value++;
};
