crates/qwik-optimizer-oxc/tests/snapshots/issue_7216_add_test.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_2p9z0XXdr7M = () => import("./test.tsx_default_component_p_q_e_hi_2p9z0XXdr7M");
const i_W7e7jpgFEgw = () => import("./test.tsx_default_component_p_q_e_const_W7e7jpgFEgw");
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_2p9z0XXdr7M = () => import("./test.tsx_default_component_p_q_e_hi_2p9z0XXdr7M");
const i_W7e7jpgFEgw = () => import("./test.tsx_default_component_p_q_e_const_W7e7jpgFEgw");
import { _jsxSplit } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = (props) => {
	return /* @__PURE__ */ _jsxSplit("p", { ..._getVarProps(props) }, _getConstProps(props.foo), null, 0, "u6_0");
};

=== test.tsx_default_component_p_q_e_hi_2p9z0XXdr7M.js === (ENTRY)


=== test.tsx_default_component_p_q_e_const_W7e7jpgFEgw.js === (ENTRY)
