crates/qwik-optimizer-oxc/tests/snapshots/issue_964.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = () => {
	console.log(function* (lo: any, t: any) {
		console.log(yield (yield lo)(t.href).then((r) => r.json()));
	});
	return /* @__PURE__ */ _jsxSorted("p", null, null, "Hello Qwik", 3, "u6_0");
}
