crates/qwik-optimizer-oxc/tests/snapshots/rename_builder_io.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@builder.io/qwik";
import { isDev } from "@builder.io/qwik/build";
import { stuff } from "@builder.io/qwik-city";
import { moreStuff } from "@builder.io/qwik-city/more/here";
import { qwikify$ } from "@builder.io/qwik-react";
import sdk from "@builder.io/sdk";

export const Foo = qwikify$(MyReactComponent);

export const Bar = $("a thing");

export const App = component$(() => {
  sdk.hello();
  if (isDev) {
    stuff();
  } else {
    moreStuff();
  }
  return "hi";
});

=== test.ts ===
import { qwikifyQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_WtIyP0H0lSk = () => import("./test.tsx_Foo_qwikify_WtIyP0H0lSk");
const i_MSAJNhrvHtQ = () => import("./test.tsx_Bar_MSAJNhrvHtQ");
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
import { stuff } from "@builder.io/qwik-city";
import { moreStuff } from "@builder.io/qwik-city/more/here";
import { isDev } from "@builder.io/qwik/build";
import sdk from "@builder.io/sdk";
export const Foo = qwikifyQrl(/* @__PURE__ */ qrl(i_WtIyP0H0lSk, "Foo_qwikify_WtIyP0H0lSk"));
export const Bar = /* @__PURE__ */ qrl(i_MSAJNhrvHtQ, "Bar_MSAJNhrvHtQ");
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_Foo_qwikify_WtIyP0H0lSk.ts === (ENTRY)
export const Foo_qwikify_WtIyP0H0lSk = MyReactComponent;

/*
{
  "origin": "test.tsx",
  "name": "Foo_qwikify_WtIyP0H0lSk",
  "entry": null,
  "displayName": "test.tsx_Foo_qwikify",
  "hash": "WtIyP0H0lSk",
  "canonicalFilename": "test.tsx_Foo_qwikify_WtIyP0H0lSk",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false
}
*/

=== test.tsx_Bar_MSAJNhrvHtQ.ts === (ENTRY)
export const Bar_MSAJNhrvHtQ = "a thing";

/*
{
  "origin": "test.tsx",
  "name": "Bar_MSAJNhrvHtQ",
  "entry": null,
  "displayName": "test.tsx_Bar",
  "hash": "MSAJNhrvHtQ",
  "canonicalFilename": "test.tsx_Bar_MSAJNhrvHtQ",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_App_component_XumqEURaLxI.ts === (ENTRY)
import sdk from "@builder.io/sdk";
import { isDev } from "@builder.io/qwik/build";
import { stuff } from "@builder.io/qwik-city";
import { moreStuff } from "@builder.io/qwik-city/more/here";
export const App_component_XumqEURaLxI = () => {
	sdk.hello();
	if (isDev) {
		stuff();
	} else {
		moreStuff();
	}
	return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
