crates/qwik-optimizer-oxc/tests/snapshots/should_convert_jsx_events.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from '@qwik.dev/core';

		const ManyEventsComponent = component$(() => {
			return (
				<div>
					<button
						onClick$={() => {}}
						onDblClick$={() => {}}
					>
						click
					</button>
					<button
						onClick$={() => {}}
						onBlur$={() => {}}
						on-anotherCustom$={() => {}}
						document:onFocus$={() => {}}
						window:onClick$={() => {}}
					>
						click
					</button>
				</div>
			);
		});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_d0rUoq0Y7Qo = () => import("./test.tsx_ManyEventsComponent_component_d0rUoq0Y7Qo");
const i_ygm370W5KJY = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY");
const i_ragb1RcWs04 = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04");
const i_ygm370W5KJY = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY");
const i_fzYpgq8WW04 = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04");
const i_HCrpsbAaSvc = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc");
const i_p9PdBU5LvjE = () => import("./test.tsx_ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE");
const i_KoKtNDq0WI4 = () => import("./test.tsx_ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4");
const ManyEventsComponent = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_d0rUoq0Y7Qo, "ManyEventsComponent_component_d0rUoq0Y7Qo"));

=== test.tsx_ManyEventsComponent_component_d0rUoq0Y7Qo.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_ygm370W5KJY = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY");
const i_ragb1RcWs04 = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04");
const i_ygm370W5KJY = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY");
const i_fzYpgq8WW04 = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04");
const i_HCrpsbAaSvc = () => import("./test.tsx_ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc");
const i_p9PdBU5LvjE = () => import("./test.tsx_ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE");
const i_KoKtNDq0WI4 = () => import("./test.tsx_ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4");
import { _jsxSorted } from "@qwik.dev/core";
export const ManyEventsComponent_component_d0rUoq0Y7Qo = () => {
	return /* @__PURE__ */ _jsxSorted("div", null, null, [/* @__PURE__ */ _jsxSorted("button", null, {
		"q-e:click": /* @__PURE__ */ qrl(i_ygm370W5KJY, "ManyEventsComponent_component_button_q_e_click_ygm370W5KJY"),
		"q-e:dblclick": /* @__PURE__ */ qrl(i_ragb1RcWs04, "ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04")
	}, "click", 3, "u6_0"), /* @__PURE__ */ _jsxSorted("button", null, {
		"q-e:click": /* @__PURE__ */ qrl(i_ygm370W5KJY, "ManyEventsComponent_component_button_q_e_click_ygm370W5KJY"),
		"q-e:blur": /* @__PURE__ */ qrl(i_fzYpgq8WW04, "ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04"),
		"q-e:-anothercustom": /* @__PURE__ */ qrl(i_HCrpsbAaSvc, "ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc"),
		"q-d:focus": /* @__PURE__ */ qrl(i_p9PdBU5LvjE, "ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE"),
		"q-w:click": /* @__PURE__ */ qrl(i_KoKtNDq0WI4, "ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4")
	}, "click", 3, "u6_1")], 1, "u6_2");
};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_d0rUoq0Y7Qo",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "d0rUoq0Y7Qo",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_d0rUoq0Y7Qo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY.js === (ENTRY)
export const ManyEventsComponent_component_button_q_e_click_ygm370W5KJY = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_e_click_ygm370W5KJY",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_e_click",
  "hash": "ygm370W5KJY",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04.js === (ENTRY)
export const ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04 = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_e_dblclick",
  "hash": "ragb1RcWs04",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_e_dblclick_ragb1RcWs04",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "onDblClick$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY.js === (ENTRY)
export const ManyEventsComponent_component_button_q_e_click_ygm370W5KJY = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_e_click_ygm370W5KJY",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_e_click",
  "hash": "ygm370W5KJY",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_e_click_ygm370W5KJY",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04.js === (ENTRY)
export const ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04 = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_e_blur",
  "hash": "fzYpgq8WW04",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_e_blur_fzYpgq8WW04",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "onBlur$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc.js === (ENTRY)
export const ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc = () => {}

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_e_-anothercustom",
  "hash": "HCrpsbAaSvc",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_e_-anothercustom_HCrpsbAaSvc",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "on-anotherCustom$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE.js === (ENTRY)
export const ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_d_focus",
  "hash": "p9PdBU5LvjE",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_d_focus_p9PdBU5LvjE",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "document:onFocus$",
  "captures": false
}
*/

=== test.tsx_ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4.js === (ENTRY)
export const ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4 = () => {};

/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_button_q_w_click",
  "hash": "KoKtNDq0WI4",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_button_q_w_click_KoKtNDq0WI4",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_ManyEventsComponent_component",
  "ctxKind": "eventHandler",
  "ctxName": "window:onClick$",
  "captures": false
}
*/
