crates/qwik-optimizer-oxc/tests/snapshots/should_convert_rest_props.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useTask$ } from "@qwik.dev/core";

export default component$<any>(({ ...props }) => {
  useTask$(() => {
    props.checked;
  });

  return "hi";
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_useTask_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_component_XXXXXXXXXXXX"),
);

=== test.tsx_default_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_useTask_XXXXXXXXXXXX");
import { useTaskQrl } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
export const default_component_XXXXXXXXXXXX = (_rawProps) => {
  const props = _restProps(_rawProps);
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_useTask_XXXXXXXXXXXX", [props]));
  return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_default_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== test.tsx_default_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const default_useTask_XXXXXXXXXXXX = () => {
  const props = _captures[0];
  props.checked;
};

/*
{
  "origin": "test.tsx",
  "name": "default_useTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_default_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_default_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_default_component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "props"
  ]
}
*/
