crates/qwik-optimizer-oxc/tests/snapshots/should_extract_single_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
export const App = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const selectedItem = useSignal<any | null>(null);
  return (
    <div>
      {data.value.map((row) => (
        <tr key={untrack(() => row.value.id)} class={row.value.selected.value ? "danger" : ""}>
          <td class="col-md-1">{row.value.id}</td>
          <td class="col-md-4">
            <a
              onClick$={() => {
                if (selectedItem.value) {
                  selectedItem.value.selected.value = false;
                }
                selectedItem.value = row.value;
                row.value.selected.value = true;
              }}
            >
              {row.value.label.value}
            </a>
          </td>
          <td class="col-md-1">
            <a
              onClick$={() => {
                const dataValue = untrack(() => data.value);
                data.value = dataValue.toSpliced(
                  dataValue.findIndex((d) => d.value.id === row.value.id),
                  1,
                );
              }}
            >
              <span aria-hidden="true">x</span>
            </a>
          </td>
          <td class="col-md-6" />
        </tr>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX");
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value.selected.value ? "danger" : "");
const _hf0_str = 'p0.value.selected.value?"danger":""';
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX");
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value.selected.value ? "danger" : "");
const _hf0_str = 'p0.value.selected.value?"danger":""';
export const App_component_XXXXXXXXXXXX = () => {
  const data = useSignal < Signal < any > [] > [];
  const selectedItem = (useSignal < any) | (null > null);
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((row) =>
      /* @__PURE__ */ _jsxSorted(
        "tr",
        null,
        { class: _fnSignal(_hf0, [row], _hf0_str) },
        [
          /* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-1" }, row.value.id, 3, "u6_0"),
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            { class: "col-md-4" },
            /* @__PURE__ */ _jsxSorted(
              "a",
              null,
              {
                "q-e:click": /* @__PURE__ */ qrl(
                  i_XXXXXXXXXXXX,
                  "App_component_a_q_e_click_XXXXXXXXXXXX",
                  [selectedItem],
                ),
              },
              row.value.label.value,
              3,
              "u6_1",
            ),
            3,
            "u6_2",
          ),
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            { class: "col-md-1" },
            /* @__PURE__ */ _jsxSorted(
              "a",
              null,
              {
                "q-e:click": /* @__PURE__ */ qrl(
                  i_XXXXXXXXXXXX,
                  "App_component_a_q_e_click_XXXXXXXXXXXX",
                  [data],
                ),
              },
              /* @__PURE__ */ _jsxSorted("span", null, { "aria-hidden": "true" }, "x", 3, "u6_3"),
              3,
              "u6_4",
            ),
            3,
            "u6_5",
          ),
          /* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-6" }, null, 3, "u6_6"),
        ],
        1,
        untrack(() => row.value.id),
      ),
    ),
    3,
    "u6_7",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value.selected.value ? "danger" : "");
const _hf0_str = 'p0.value.selected.value?"danger":""';
export const App_component_a_q_e_click_XXXXXXXXXXXX = () => {
  const selectedItem = _captures[0];
  if (selectedItem.value) {
    selectedItem.value.selected.value = false;
  }
  selectedItem.value = row.value;
  row.value.selected.value = true;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_a_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_a_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "selectedItem"
  ]
}
*/

=== test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value.selected.value ? "danger" : "");
const _hf0_str = 'p0.value.selected.value?"danger":""';
export const App_component_a_q_e_click_XXXXXXXXXXXX = () => {
  const data = _captures[0];
  const dataValue = untrack(() => data.value);
  data.value = dataValue.toSpliced(
    dataValue.findIndex((d) => d.value.id === row.value.id),
    1,
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_a_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_a_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_a_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "data"
  ]
}
*/
